--- a/mi_assessment/requirements.txt
+++ b/mi_assessment/requirements.txt
@@ -1,8 +1,10 @@
-Django==4.2
-djangorestframework
-djangorestframework-simplejwt
-django-cors-headers
-django-crispy-forms
-crispy-bootstrap5
-gunicorn
-django
+Django==5.0.4
+gunicorn==22.0.0
+psycopg2-binary==2.9.9
+whitenoise==6.6.0
+django-crispy-forms==2.1
+crispy-bootstrap5==0.7
+Pillow==10.3.0
+asgiref==3.8.1
+sqlparse==0.5.0
+tzdata==2024.1
